<resources>
    <string name="app_name">Calculator</string>
    <string name="addBtn">+</string>
    <string name="result">Result</string>
    <string name="minusBtn">-</string>
    <string name="productBtn">*</string>
    <string name="divisionBtn">/</string>
    <string name="num1">1st Number</string>
    <string name="num2">2nd Number</string>
    <string name="loginUser">Login</string>
    <string name="about_me">About Me</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="user_login">User Login</string>
    <string name="login">Login</string>
</resources>